--- a/PA2.vcxproj
+++ b/PA2.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="app.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Coin.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
